# ScVideo

./: .gitignore  README.md
ScVideo/: CMakeLists.txt
ScVideo/assets/appico/: others.rc
ScVideo/src/: CMakeLists.txt  main.cpp
ScVideo/src/fun/: screenrecord.cpp  screenrecord.h
ScVideo/src/wid/: countdown.cpp  countdown.h  countdown.ui  quicksr.cpp  quicksr.h  quicksr.ui  recordschedule.cpp  recordschedule.h  recordschedule.ui  scmainwindow.cpp  scmainwindow.h  scmainwindow.ui
